fix/main: injection des éléments HTML en JS
création de la div textcontainer, correction du css en conséquence, suppression des éléments du fichiers HTML

--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
                     <p class="report">Your performance exceed 65% of the people conducting the test here!</p>
                 </div>
                 <div id="rightcol">
-                    <div id="detail-report">
+                    <div id="detailReport">
                         <h2>Summary</h2>
-                        <div class="reaction"><h3>Reaction</h3> <p><span>chut</span>/100</p></div>
-                        <div class="memory"><h3>Memory</h3><p><span></span>/100</p></div>
-                        <div class="verbal"><h3>Verbal</h3><p><span></span>/100</p></div>
-                        <div class="visual"><h3>Visual</h3><p><span></span>/100</p></div>
                     </div>
                     <p class="button">Continue</p>
                 </div>
